--- a/src/Components/styles/Registro.css
+++ b/src/Components/styles/Registro.css
@@ -132,4 +132,44 @@
     width: 115px;
     height: 35px;
     font-weight: bold;
+    cursor: pointer;
+}
+
+/*Clases de validaciones*/
+
+.hide {
+    display: none;
+}
+
+.offscreen {
+    position: absolute;
+    left: -9999px;
+}
+
+.instructions {
+    font-size: 0.75rem;
+    border-radius: 0.5rem;
+    color: black;
+    padding: 0.25rem;
+    position: relative;
+    bottom: -10px;
+}
+
+.valid {
+    color: limegreen;
+    margin-left: 0.25rem;
+}
+
+.invalid {
+    color: red;
+    margin-left: 0.25rem;
+}
+
+.errmsg {
+    background-color: lightpink;
+    color: firebrick;
+    width: 157px;
+    font-weight: bold;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
 }
